<resources>
    <string name="app_name">Cellular Coverage</string>
    <string name="action_settings">Settings</string>
    <string name="txtFromDate">From Date (Optional)</string>
    <string name="txtToDate">To Date (Optional)</string>
    <string name="radio_signal">Signal Strength</string>
    <string name="radio_download">Download Speed</string>
    <string name="radio_upload">Upload Speed</string>
    <string name="btn_display">Map Display</string>
    <string name="btn_display0">Date Information</string>
    <string name="title_activity_carrier_list">CarrierList</string>
    <string name="title_activity_main_activity2">Cellular Coverage ECE 575</string>
    <string name="title_activity_signal_parameter">SignalParameter</string>
    <string name="title_activity_map_display">MapDisplay</string>
    <string name="title_activity_date_form">DateForm</string>
</resources>
