<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ncsu.wireless.cellularcoverage.SignalParameter">

    <RadioGroup
        android:id="@+id/radioParameters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radioSignal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_signal"
            android:checked="true" />

        <RadioButton
            android:id="@+id/radioDelay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_download" />

        <RadioButton
            android:id="@+id/radioThroughput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_upload" />

    </RadioGroup>

    <Button
        android:id="@+id/btnDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_display0"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

</RelativeLayout>
