<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ncsu.wireless.cellularcoverage.DateForm">

    <EditText
        android:id="@+id/editText_fromDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="text"
        android:hint="YYYY-MM-DD">
    </EditText>

    <EditText
        android:id="@+id/editText_toDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="text"
        android:hint="YYYY-MM-DD"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText_toDate"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:text="@string/txtFromDate" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText_toDate"
        android:layout_below="@+id/editText_fromDate"
        android:text="@string/txtToDate" />

    <Button
        android:id="@+id/btnDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_display"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

</RelativeLayout>
